overflow issue resolved

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -124,7 +124,7 @@ margin-bottom: 2rem;
   align-items: flex-end;
   margin-right: 2vh;
   margin-top: 2rem;
-  padding: 0em 1em;
+  /* padding: 0em 2em; */
  }
  @media only screen and (max-width: 728px){
   .third{
